css icons shadows

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body class="body">
     <header class="header">
       <div class="container head">
+        <!-- _____________________________________________________NAVIGATION - MENU -->
         <nav class="nav">
           <a href="./index.html" class="logo link"
             >Web<span class="logo-studio">Studio</span></a
@@ -38,6 +39,7 @@
             </li>
           </ul>
         </nav>
+        <!-- ______________________________________________________ADDRESSES_____ -->
         <address class="address link">
           <ul class="address list">
             <li>
@@ -55,6 +57,7 @@
       </div>
     </header>
     <main>
+      <!-- _______________________________________________________FIRST SECTION ______-->
       <section class="starting-section section">
         <div class="container container-one">
           <h1 class="heading-one">Effective Solutions for Your Business</h1>
@@ -66,8 +69,10 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">section2</h2>
+          <!-- _______________________________________________________________ GOALS-->
           <ul class="first-index list">
             <li class="i-list-item">
+              <svg><use href="./images/icons.svg#icon-antenna1"></use></svg>
               <h3 class="index-h-three">Strategy</h3>
               <p class="index-p">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,7 @@
               </p>
             </li>
             <li class="i-list-item">
+              <svg><use href="./images/icons.svg#icon-clock1"></use></svg>
               <h3 class="index-h-three">Punctuality</h3>
               <p class="index-p">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +88,7 @@
               </p>
             </li>
             <li class="i-list-item">
+              <svg><use href="./images/icons.svg#icon-diagram1"></use></svg>
               <h3 class="index-h-three">Diligence</h3>
               <p class="index-p">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +96,7 @@
               </p>
             </li>
             <li class="i-list-item">
+              <svg><use href="./images/icons.svg#icon-astronaut1"></use></svg>
               <h3 class="index-h-three">Technologies</h3>
               <p class="index-p">
                 Design practice focused on digital experiences. We bring forth a
@@ -98,6 +106,7 @@
           </ul>
         </div>
       </section>
+      <!-- _________________________________________________WHAT R WE DOING SECTION ___-->
       <section class="third-section section">
         <div class="container">
           <h2 class="index-h-two">What are we doing</h2>
@@ -133,6 +142,7 @@
           </ul>
         </div>
       </section>
+      <!-- ___________________________________________________STUFF SECTION________-->
       <section class="section four">
         <div class="container stuff-container">
           <h2 class="index-h-two">Our Team</h2>
@@ -147,6 +157,18 @@
               <div class="stuff">
                 <h3 class="index-h-three">Mark Guerrero</h3>
                 <p class="index-p">Product Designer</p>
+                <svg>
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg>
               </div>
             </li>
             <li class="stuff-description">
@@ -159,6 +181,18 @@
               <div class="stuff">
                 <h3 class="index-h-three">Tom Ford</h3>
                 <p class="index-p">Frontend Developer</p>
+                <svg>
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg>
               </div>
             </li>
             <li class="stuff-description">
@@ -171,6 +205,18 @@
               <div class="stuff">
                 <h3 class="index-h-three">Camila Garcia</h3>
                 <p class="index-p">Marketing</p>
+                <svg>
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg>
               </div>
             </li>
             <li class="stuff-description">
@@ -183,6 +229,18 @@
               <div class="stuff">
                 <h3 class="index-h-three">Daniel Wilson</h3>
                 <p class="index-p">UI Designer</p>
+                <svg>
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+                <svg>
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg>
               </div>
             </li>
           </ul>
