--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,7 @@
       </div>
     </header>
     <main>
+      <!-- __________________________________________________________filter section -->
       <section class="section-portfolio">
         <div class="container main-portfolio">
           <h1 class="visually-hidden">section</h1>
@@ -75,6 +76,7 @@
               <button type="button" class="button">Marketing</button>
             </li>
           </ul>
+          <!-- ____________________________________________________ img list section-->
           <ul class="list portfolio-img-list">
             <li class="image-link">
               <a class="link">
