--- a/index.html
+++ b/index.html
@@ -157,16 +157,16 @@
               <div class="stuff">
                 <h3 class="index-h-three">Mark Guerrero</h3>
                 <p class="index-p">Product Designer</p>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-instagram2"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-facebook1"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </div>
@@ -181,16 +181,16 @@
               <div class="stuff">
                 <h3 class="index-h-three">Tom Ford</h3>
                 <p class="index-p">Frontend Developer</p>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-instagram2"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-facebook1"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </div>
@@ -205,16 +205,16 @@
               <div class="stuff">
                 <h3 class="index-h-three">Camila Garcia</h3>
                 <p class="index-p">Marketing</p>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-instagram2"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-facebook1"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </div>
@@ -229,16 +229,16 @@
               <div class="stuff">
                 <h3 class="index-h-three">Daniel Wilson</h3>
                 <p class="index-p">UI Designer</p>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-instagram2"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-facebook1"></use>
                 </svg>
-                <svg>
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </div>
@@ -246,7 +246,45 @@
           </ul>
         </div>
       </section>
+      <section class="section">
+        <h2 class="index-h-two">Customers</h2>
+        <div class="container">
+          <ul class="customers list">
+            <li class="icon">
+              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+                <use href="./images/icons.svg#icon-logo"></use>
+              </svg>
+            </li>
+            <li class="icon">
+              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+                <use href="./images/icons.svg#icon-logo2"></use>
+              </svg>
+            </li>
+            <li class="icon">
+              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+                <use href="./images/icons.svg#icon-logo3"></use>
+              </svg>
+            </li>
+            <li class="icon">
+              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+                <use href="./images/icons.svg#icon-logo4"></use>
+              </svg>
+            </li>
+            <li class="icon">
+              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+                <use href="./images/icons.svg#icon-logo5"></use>
+              </svg>
+            </li>
+            <li class="icon">
+              <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
+                <use href="./images/icons.svg#icon-logo6"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <!-- _________________________________________________________________________FOOTER-->
     <footer id="contacts" class="footer">
       <div class="container">
         <a href="./index.html" class="logo link footer-logo"
