--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
     <main>
       <!-- _______________________________________________________FIRST SECTION ______-->
-      <section class="starting-section section">
+      <section class="starting-section background section">
         <div class="container container-one">
           <h1 class="heading-one">Effective Solutions for Your Business</h1>
           <button type="button" class="index-s-one-button">
