css icons update

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
           <!-- _______________________________________________________________ GOALS-->
           <ul class="first-index list">
             <li class="i-list-item">
-              <svg><use href="./images/icons.svg#icon-antenna1"></use></svg>
+              <div class="goal-icon-box">
+                <svg xmlns="http://www.w3.org/2000/svg">
+                  <use href="./images/icons.svg#icon-antenna1"></use>
+                </svg>
+              </div>
               <h3 class="index-h-three">Strategy</h3>
               <p class="index-p">
                 Our goal is to identify the business problem to walk away with
@@ -80,7 +84,11 @@
               </p>
             </li>
             <li class="i-list-item">
-              <svg><use href="./images/icons.svg#icon-clock1"></use></svg>
+              <div class="goal-icon-box">
+                <svg xmlns="http://www.w3.org/2000/svg">
+                  <use href="./images/icons.svg#icon-clock1"></use>
+                </svg>
+              </div>
               <h3 class="index-h-three">Punctuality</h3>
               <p class="index-p">
                 Bring the key message to the brand's audience for the best price
@@ -88,7 +96,11 @@
               </p>
             </li>
             <li class="i-list-item">
-              <svg><use href="./images/icons.svg#icon-diagram1"></use></svg>
+              <div class="goal-icon-box">
+                <svg xmlns="http://www.w3.org/2000/svg">
+                  <use href="./images/icons.svg#icon-diagram1"></use>
+                </svg>
+              </div>
               <h3 class="index-h-three">Diligence</h3>
               <p class="index-p">
                 Research and confirm brands that present the strongest digital
@@ -96,7 +108,11 @@
               </p>
             </li>
             <li class="i-list-item">
-              <svg><use href="./images/icons.svg#icon-astronaut1"></use></svg>
+              <div class="goal-icon-box">
+                <svg xmlns="http://www.w3.org/2000/svg">
+                  <use href="./images/icons.svg#icon-astronaut1"></use>
+                </svg>
+              </div>
               <h3 class="index-h-three">Technologies</h3>
               <p class="index-p">
                 Design practice focused on digital experiences. We bring forth a
