--- a/index.html
+++ b/index.html
@@ -173,18 +173,60 @@
               <div class="stuff">
                 <h3 class="index-h-three">Mark Guerrero</h3>
                 <p class="index-p">Product Designer</p>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
+                <ul class="list social-media-icons">
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-instagram2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="stuff-description">
@@ -197,18 +239,60 @@
               <div class="stuff">
                 <h3 class="index-h-three">Tom Ford</h3>
                 <p class="index-p">Frontend Developer</p>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
+                <ul class="list social-media-icons">
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-instagram2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="stuff-description">
@@ -221,18 +305,60 @@
               <div class="stuff">
                 <h3 class="index-h-three">Camila Garcia</h3>
                 <p class="index-p">Marketing</p>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
+                <ul class="list social-media-icons">
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-instagram2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="stuff-description">
@@ -245,18 +371,60 @@
               <div class="stuff">
                 <h3 class="index-h-three">Daniel Wilson</h3>
                 <p class="index-p">UI Designer</p>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
+                <ul class="list social-media-icons">
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-instagram2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a class="sm-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
