--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">section2</h2>
-          <!-- _______________________________________________________________ GOALS-->
+          <!-- _____________________________________________________________________________________________ GOALS-->
           <ul class="first-index list">
             <li class="i-list-item">
               <div class="goal-icon-box">
@@ -122,7 +122,7 @@
           </ul>
         </div>
       </section>
-      <!-- _________________________________________________WHAT R WE DOING SECTION ___-->
+      <!-- ___________________________________________________________________________________WHAT R WE DOING SECTION ___-->
       <section class="third-section section">
         <div class="container">
           <h2 class="index-h-two">What are we doing</h2>
@@ -158,7 +158,7 @@
           </ul>
         </div>
       </section>
-      <!-- ___________________________________________________STUFF SECTION________-->
+      <!-- ___________________________________________________________________________________________STUFF SECTION________-->
       <section class="section four">
         <div class="container stuff-container">
           <h2 class="index-h-two">Our Team</h2>
@@ -430,36 +430,37 @@
           </ul>
         </div>
       </section>
+      <!-- ________________________________________________________________________________CUSTOMERS ___-->
       <section class="section">
         <h2 class="index-h-two">Customers</h2>
         <div class="container">
           <ul class="customers list">
-            <li class="icon">
+            <li class="icon-list icon">
               <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo"></use>
               </svg>
             </li>
-            <li class="icon">
+            <li class="icon-list icon">
               <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo2"></use>
               </svg>
             </li>
-            <li class="icon">
+            <li class="icon-list icon">
               <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo3"></use>
               </svg>
             </li>
-            <li class="icon">
+            <li class="icon-list icon">
               <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo4"></use>
               </svg>
             </li>
-            <li class="icon">
+            <li class="icon-list icon">
               <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo5"></use>
               </svg>
             </li>
-            <li class="icon">
+            <li class="icon-list icon">
               <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo6"></use>
               </svg>
@@ -470,14 +471,73 @@
     </main>
     <!-- _________________________________________________________________________FOOTER-->
     <footer id="contacts" class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo link footer-logo"
-          >Web<span class="logo-studio">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="logo link footer-logo"
+            >Web<span class="logo-studio">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="sm-footer-div">
+          <p class="social-media-text">Social media</p>
+          <ul class="list sm-icons-footer">
+            <li class="social-media-list">
+              <a class="sm-icon-f">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list">
+              <a class="sm-icon-f">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list">
+              <a class="sm-icon-f">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list">
+              <a class="sm-icon-f">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                >
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
