--- a/index.html
+++ b/index.html
@@ -448,9 +448,9 @@
       </section>
       <!-- ________________________________________________________________________________CUSTOMERS ___-->
       <section class="section">
+        <div class="container"></div>
         <h2 class="index-h-two">Customers</h2>
-        <div class="container">
-          <ul class="customers list">
+         <ul class="customers list">
             <li class="icon-list icon">
               <svg width="104px" height="56px" viewBox="0 0 104 56" fill="none">
                 <use href="./images/icons.svg#icon-logo"></use>
