--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
               <a class="customers-icon icon">
                 <svg
                   class="svg-customer"
-                  width="104px"
-                  height="56px"
+                  width="104"
+                  height="56"
                   viewBox="0 0 104 56"
                   fill="none"
                 >
@@ -468,8 +468,8 @@
               <a class="customers-icon icon">
                 <svg
                   class="svg-customer"
-                  width="104px"
-                  height="56px"
+                  width="104"
+                  height="56"
                   viewBox="0 0 104 56"
                   fill="none"
                 >
@@ -481,8 +481,8 @@
               <a class="customers-icon icon">
                 <svg
                   class="svg-customer"
-                  width="104px"
-                  height="56px"
+                  width="104"
+                  height="56"
                   viewBox="0 0 104 56"
                   fill="none"
                 >
@@ -494,8 +494,8 @@
               <a class="customers-icon icon">
                 <svg
                   class="svg-customer"
-                  width="104px"
-                  height="56px"
+                  width="104"
+                  height="56"
                   viewBox="0 0 104 56"
                   fill="none"
                 >
@@ -507,8 +507,8 @@
               <a class="customers-icon icon">
                 <svg
                   class="svg-customer"
-                  width="104px"
-                  height="56px"
+                  width="104"
+                  height="56"
                   viewBox="0 0 104 56"
                   fill="none"
                 >
@@ -520,8 +520,8 @@
               <a class="customers-icon icon">
                 <svg
                   class="svg-customer"
-                  width="104px"
-                  height="56px"
+                  width="104"
+                  height="56"
                   viewBox="0 0 104 56"
                   fill="none"
                 >
